<resources>
    <string name="hms_abort">Stop</string>
    <string name="hms_abort_message">Stop downloading?</string>
    <string name="hms_bindfaildlg_message">%1$s is unable to use HMS Core. Launch Optimizer (Phone Manager) or go to Settings, enable all permissions for %2$s (including auto-launch and secondary launch), and try again.</string>
    <string name="hms_cancel">Cancel</string>
    <string name="hms_check_failure">Failed to check for updates.</string>
    <string name="hms_check_no_update">Your version is up to date.</string>
    <string name="hms_checking">Checking for updates…</string>
    <string name="hms_confirm">OK</string>
    <string name="hms_download_failure">Failed to download HMS Core package.</string>
    <string name="hms_download_no_space">Not enough free space. Download cannot be completed.</string>
    <string name="hms_download_retry">Download failed. Try again?</string>
    <string name="hms_downloading">Downloading HMS Core progress: %d%%</string>
    <string name="hms_downloading_loading">Downloading</string>
    <string name="hms_downloading_new">Downloading HMS Core</string>
    <string name="hms_gamebox_name">HUAWEI GameCenter</string>
    <string name="hms_install">Install</string>
    <string name="hms_install_message">HMS Core must be installed to use this feature. Install?</string>
    <string name="hms_retry">Retry</string>
    <string name="hms_update">Update</string>
    <string name="hms_update_continue">Download</string>
    <string name="hms_update_message">Update to the latest version of HMS Core to use this feature. Update now?</string>
    <string name="hms_update_message_new">This service requires the latest version of the following app: %1$s</string>
    <string name="hms_update_nettype">No Wi-Fi connection. Download using mobile data?</string>
    <string name="hms_update_title">HMS Core</string>
    <string name="hms_bindfaildlg_title">@string/hms_update_title</string>
    <string name="hms_base_google">https://play.google.com/store</string>
    <string name="hms_base_vmall">https://appgallery.cloud.huawei.com/app/</string>
    <string name="ysf_empty" />
    <string name="ysf_ok">确定</string>
    <string name="ysf_cancel">取消</string>
    <string name="ysf_i_know">知道了</string>
    <string name="ysf_custom_attachment">自定义消息</string>
    <string name="ysf_notifier_new_message">新消息</string>
    <string name="ysf_input_panel_photo">图 片</string>
    <string name="ysf_input_panel_video">视 频</string>
    <string name="ysf_input_panel_location">位 置</string>
    <string name="ysf_input_panel_take">拍 摄</string>
    <string name="ysf_compatible_image_format_tips">请选择JPG PNG BMP GIF格式的图片文件</string>
    <string name="ysf_re_download_message">重新下载?</string>
    <string name="ysf_re_send_has_blank">重 发</string>
    <string name="ysf_re_send_message">重发消息?</string>
    <string name="ysf_copy_has_blank">复 制</string>
    <string name="ysf_delete_has_blank">删 除</string>
    <string name="ysf_save">保存</string>
    <string name="ysf_save_to_device">保存到手机</string>
    <string name="ysf_picture_save_fail">图片保存失败</string>
    <string name="ysf_picture_save_to">图片已保存到手机</string>
    <string name="ysf_send"> 发送 </string>
    <string name="ysf_unknown_title">无法显示该内容</string>
    <string name="ysf_unknown_desc">客户端版本不支持该内容</string>
    <string name="ysf_requesting_staff">正在连接客服</string>
    <string name="ysf_send_message_disallow_as_requesting">请等待连接客服成功后，再发送消息</string>
    <string name="ysf_retry_connect">重新连接</string>
    <string name="ysf_some_error_happened">连接客服失败，您可以尝试</string>
    <string name="ysf_no_staff">当前客服不在线，如需帮助请留言</string>
    <string name="ysf_no_staff_disabled">客服不在线，不支持留言</string>
    <string name="ysf_request_timeout">网络连接失败，请稍后再试</string>
    <string name="ysf_staff_assigned">%1$s为您服务</string>
    <string name="ysf_staff_assigned_with_group">%1$s的%2$s为您服务</string>
    <string name="ysf_service_in_queue">正在排队，您的前面还有%1$d个人，请稍等…</string>
    <string name="ysf_service_in_queue_hide_length">当前排队人数较多，请耐心等待…</string>
    <string name="ysf_service_product_invalid">当前没有客服在线</string>
    <string name="ysf_evaluation">评价</string>
    <string name="ysf_evaluation_complete">已评价</string>
    <string name="ysf_evaluation_tips">请对我们的服务做出评价</string>
    <string name="ysf_evaluation_satisfied">满意</string>
    <string name="ysf_evaluation_dissatisfied">不满意</string>
    <string name="ysf_evaluation_much_dissatisfied">非常不满意</string>
    <string name="ysf_evaluation_common">一般</string>
    <string name="ysf_evaluation_much_satisfied">非常满意</string>
    <string name="ysf_evaluation_dialog_et_hint_remark">备选（选填）</string>
    <string name="ysf_evaluation_btn_submit">提交</string>
    <string name="ysf_evaluation_message_item_text">感谢您的咨询，请对我们的服务做出评价</string>
    <string name="ysf_evaluation_message_item_btn">评价</string>
    <string name="ysf_evaluation_result_default_prefix">你对我们的服务评价为</string>
    <string name="ysf_evaluation_result">：&lt;b>%s&lt;/b>。非常感谢！</string>
    <string name="ysf_evaluation_dialog_message">是否放弃评价，放弃后不可恢复</string>
    <string name="ysf_evaluation_submit_net_error_text">网络连接失败，请稍后再试</string>
    <string name="ysf_robot_answer_useful">有用</string>
    <string name="ysf_robot_answer_useless">没用</string>
    <string name="ysf_menu_request_staff">人工客服</string>
    <string name="ysf_menu_shop_name">商家</string>
    <string name="ysf_menu_close_session">退出</string>
    <string name="ysf_dialog_close_session">确认退出对话？</string>
    <string name="ysf_dialog_quit_queue">确认退出排队？</string>
    <string name="ysf_dialog_message_queue">是否继续咨询在线客服？您可以先去逛逛，排队成功后将提醒您</string>
    <string name="ysf_service_title_default">在线客服</string>
    <string name="ysf_service_source_title_notification">通知栏</string>
    <string name="ysf_msg_quit_session_failed">退出对话失败，请稍后再试</string>
    <string name="ysf_msg_quit_queue_failed">退出排队失败，请稍后再试</string>
    <string name="ysf_msg_quit_session_tips">您退出了咨询</string>
    <string name="ysf_robot_evaluate_disable">会话已结束，暂不支持评价</string>
    <string name="ysf_audio_record_touch_to_record">按住 说话</string>
    <string name="ysf_audio_record_up_to_complete">松开 结束</string>
    <string name="ysf_audio_record_move_up_to_cancel">手指上滑，取消发送</string>
    <string name="ysf_audio_record_alert">说话时间太短</string>
    <string name="ysf_audio_record_time_is_up_tips">说话时间已到%1$d秒</string>
    <string name="ysf_audio_record_sdcard_not_exist_error">请插入SD卡</string>
    <string name="ysf_audio_record_error">录音失败，请重试</string>
    <string name="ysf_audio_record_init_failed">初始化录音失败</string>
    <string name="ysf_audio_record_timer_default">00:00</string>
    <string name="ysf_audio_record_cancel_tip">松开手指，取消发送</string>
    <string name="ysf_audio_record_reach_max_duration">录音达到最大时间，是否发送？</string>
    <string name="ysf_audio_play_by_earphone">使用听筒播放</string>
    <string name="ysf_audio_play_by_speaker">使用扬声器播放</string>
    <string name="ysf_audio_is_playing_by_earphone">正在使用听筒播放</string>
    <string name="ysf_audio_current_mode_is_earphone">当前为听筒模式</string>
    <string name="ysf_audio_current_mode_is_speaker">当前为扬声器模式</string>
    <string name="ysf_audio_switch_to_speaker">已从听筒切换为扬声器播放</string>
    <string name="ysf_audio_switch_to_earphone">已从扬声器切换为听筒播放</string>
    <string name="ysf_audio_under_translating">转换中…</string>
    <string name="ysf_audio_translate">语音转换文字</string>
    <string name="ysf_audio_translate_failed">转换失败</string>
    <string name="ysf_audio_translate_to_text_failed">语音转文字失败</string>
    <string name="ysf_picker_image_sdcard_not_enough_error">SD卡被拔出存储空间不足，无法保存此次多媒体消息</string>
    <string name="ysf_picker_image_choose_from_photo_album">从手机相册选择</string>
    <string name="ysf_picker_image_preview">预览</string>
    <string name="ysf_picker_image_send">发送</string>
    <string name="ysf_picker_image_folder">相册</string>
    <string name="ysf_picker_image_album_loading">相册加载中…</string>
    <string name="ysf_picker_image_album_empty">相册中没有图片！</string>
    <string name="ysf_picker_image_folder_info">共%d张</string>
    <string name="ysf_picker_image_exceed_max_image_select">最多选择%d张图片！</string>
    <string name="ysf_picker_image_send_select">完成(%d)</string>
    <string name="ysf_picker_image_preview_original">发送原图</string>
    <string name="ysf_picker_image_preview_original_select">发送原图(%s)</string>
    <string name="ysf_picker_image_error">目前仅支持jpg/png/bmp/gif格式图片的传送</string>
    <string name="ysf_image_compressed_size">该原始图片大小为: %1$s,</string>
    <string name="ysf_image_unknown_size">未知大小</string>
    <string name="ysf_image_send_confirm">是否发送该原始图片？</string>
    <string name="ysf_image_total_compressed_size">原始图片总大小为: %1$s,</string>
    <string name="ysf_image_send_bundle_confirm">是否发送这些原始图片？</string>
    <string name="ysf_image_retake">重拍</string>
    <string name="ysf_image_show_error">图片显示异常</string>
    <string name="ysf_image_out_of_memory">内存不足</string>
    <string name="ysf_image_download_failed">图片下载失败</string>
    <string name="ysf_no_permission_camera">没有权限，无法打开摄像头！</string>
    <string name="ysf_no_permission_photo">没有权限，无法打开相册！</string>
    <string name="ysf_no_permission_send_audio">没有权限，无法发送语音！</string>
    <string name="ysf_no_permission_play_audio">没有权限，无法播放语音！</string>
    <string name="ysf_no_permission_send_image">没有权限，无法存储和发送图片！</string>
    <string name="ysf_no_permission_audio_error">消息未下载完毕或者消息错误！</string>
    <string name="ysf_no_permission_download_audio">没有权限，无法加载语音！</string>
    <string name="ysf_no_permission_download_image">没有权限，无法加载图片！</string>
    <string name="ysf_no_permission_download_file">没有权限，无法加载文件！</string>
    <string name="ysf_ptr_pull_to_refresh">下拉刷新</string>
    <string name="ysf_ptr_release_to_refresh">释放立即刷新</string>
    <string name="ysf_ptr_refreshing">正在刷新…</string>
    <string name="ysf_ptr_refresh_succeed">刷新成功</string>
    <string name="ysf_ptr_refresh_failed">刷新失败，请稍后再试</string>
    <string name="ysf_ptr_pull_to_load">加载更多</string>
    <string name="ysf_ptr_release_to_load">释放立即加载</string>
    <string name="ysf_ptr_loading">正在加载…</string>
    <string name="ysf_ptr_load_succeed">加载成功</string>
    <string name="ysf_ptr_load_failed">加载失败，请稍后再试</string>
    <string name="ysf_ptr_load_completed">没有更多了</string>
    <string name="ysf_activity_file_download">文件预览</string>
    <string name="ysf_download_network_not_available">当前网络不可用，请检查你的网络</string>
    <string name="ysf_download_tips_title">下载文件将产生手机流量</string>
    <string name="ysf_download_tips_message">检测到您处于非WIFI环境下，下载文件将产生手机流量，是否确认继续下载？</string>
    <string name="ysf_download_tips_sure">确认下载</string>
    <string name="ysf_file_download_file_size">文件大小：%s</string>
    <string name="ysf_file_download_progress">正在下载…(%1$s/%2$s)</string>
    <string name="ysf_file_download">下载</string>
    <string name="ysf_file_open">用其他应用打开</string>
    <string name="ysf_file_open_tips">七鱼暂时无法打开此类文件，可使用其他应用打开并预览</string>
    <string name="ysf_file_download_fail">文件下载失败</string>
    <string name="lt_input_username_msg">请输入雷霆账号</string>
    <string name="lt_input_password_msg">请输入登录密码</string>
    <string name="lt_login_login_text">登录</string>
    <string name="lt_login_forget_password_text">忘记密码</string>
    <string name="lt_login_register_text">注册账号</string>
    <string name="lt_login_help_text">联系客服</string>
    <string name="lt_real_name_authority_title_text">实名认证</string>
    <string name="lt_real_name_authority_tip_text">根据国家法规要求，游戏必须实名认证，您尚未进行实名认证，将无法进入游戏，请认证！</string>
    <string name="lt_real_name_input_tip_text">真实姓名</string>
    <string name="lt_id_card_number_input_tip_text">身份证号</string>
    <string name="lt_real_name_hint_text">请输入姓名</string>
    <string name="lt_id_card_number_hint_text">请输入正确的身份证号码</string>
    <string name="lt_real_name_authority_cancel_button_text">取消</string>
    <string name="lt_real_name_authority_submit_button_text">提交</string>
    <string name="crashed">对不起，程序异常退出了，是否发送崩溃日志信息，以方便我们处理该问题？</string>
    <string name="report">　发　　送　</string>
    <string name="close">　取　　消　</string>
</resources>