<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:overScrollMode="always"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/lt_layout_real_name_authority_background" android:padding="@dimen/lt_real_name_authority_layout_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/lt_real_name_authority_title_text_size" android:textColor="@color/lt_real_name_authority_text_color" android:layout_gravity="center_horizontal" android:id="@id/real_name_authority_title_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lt_real_name_authority_title_text" />
        <View android:id="@id/title_view_divide_line_view" android:background="@color/lt_real_name_authority_text_color" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
        <TextView android:textColor="@color/lt_real_name_authority_text_color" android:id="@id/real_name_authority_reason_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lt_real_name_authority_tip_text" />
        <TextView android:textColor="@color/lt_real_name_authority_text_color" android:id="@id/real_name_input_tip_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/lt_real_name_input_tip_text" />
        <EditText android:textColor="@color/lt_real_name_authority_text_color" android:textColorHint="@color/lt_light_gray" android:id="@id/real_name_input_view" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/lt_real_name_hint_text" android:drawableBottom="@drawable/lt_real_name_authority_edit_view_background" android:drawablePadding="3.0dip" />
        <TextView android:textColor="@color/lt_real_name_authority_text_color" android:id="@id/id_card_number_input_tip_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/lt_id_card_number_input_tip_text" />
        <EditText android:textColor="@color/lt_real_name_authority_text_color" android:textColorHint="@color/lt_light_gray" android:id="@id/id_card_number_input_view" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/lt_id_card_number_hint_text" android:drawableBottom="@drawable/lt_real_name_authority_edit_view_background" android:drawablePadding="3.0dip" />
        <TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <Button android:textColor="@color/lt_real_name_authority_text_color" android:id="@id/real_name_authority_cancel_button" android:background="@color/lt_cancel_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/lt_real_name_authority_cancel_button_text" android:layout_weight="1.0" />
            <Button android:textStyle="bold" android:textColor="@color/white" android:id="@id/real_name_authority_submit_button" android:background="@color/lt_submit_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/lt_real_name_authority_submit_button_text" android:layout_weight="1.0" />
        </TableRow>
    </LinearLayout>
</ScrollView>