<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/mainLayout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="18.0sp" android:id="@id/txtView" android:padding="5.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/crashed" android:layout_alignParentTop="true" />
        <LinearLayout android:orientation="horizontal" android:padding="5.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <Button android:id="@id/report" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/report" />
            <Button android:id="@id/close" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/close" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>