<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="20.0dip">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="20.0dip" android:layout_weight="3.0">
            <LinearLayout android:background="@drawable/logo4" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="20.0dip" android:layout_weight="2.0">
                <LinearLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="8.0dip" android:layout_weight="1.0">
                    <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
                        <EditText android:textColor="#ff000000" android:id="@id/username" android:background="@drawable/bg_edit" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/lt_input_username_msg" android:singleLine="true" />
                        <ImageView android:id="@id/push" android:background="@drawable/list_20_50" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignRight="@id/username" android:layout_centerVertical="true" />
                    </RelativeLayout>
                </LinearLayout>
                <RelativeLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="8.0dip" android:layout_weight="1.0">
                    <EditText android:textColor="#ff000000" android:id="@id/password" android:background="@drawable/bg_edit" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/lt_input_password_msg" android:singleLine="true" android:inputType="textPassword" />
                </RelativeLayout>
                <TextView android:textSize="20.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/login_submit_text" android:background="#ff478ce0" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/lt_login_login_text" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
            <LinearLayout android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
                <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <ImageView android:background="@drawable/lock_open" android:layout_width="@dimen/login_link_icon_size" android:layout_height="@dimen/login_link_icon_size" />
                    <TextView android:textSize="@dimen/login_link_text_size" android:textColor="@color/login_link_text_color" android:id="@id/find_pwd" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lt_login_forget_password_text" />
                </LinearLayout>
                <View android:background="@android:color/darker_gray" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <ImageView android:id="@id/image_person" android:background="@drawable/person_05" android:layout_width="@dimen/login_link_icon_size" android:layout_height="@dimen/login_link_icon_size" />
                    <TextView android:textSize="@dimen/login_link_text_size" android:textColor="@color/login_link_text_color" android:id="@id/registers" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lt_login_register_text" />
                </LinearLayout>
                <View android:id="@id/findGm_line" android:background="@android:color/darker_gray" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                <LinearLayout android:gravity="center" android:id="@id/findGm_ly" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <ImageView android:background="@drawable/service_06" android:layout_width="@dimen/login_link_icon_size" android:layout_height="@dimen/login_link_icon_size" />
                    <TextView android:textSize="@dimen/login_link_text_size" android:textColor="@color/login_link_text_color" android:id="@id/findGM" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lt_login_help_text" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>