<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@id/logo" android:layout_width="fill_parent" android:layout_height="60.0dip" android:layout_marginTop="6.0dip" android:layout_marginBottom="4.0dip">
        <ImageView android:id="@id/leiting_logo" android:background="@drawable/logo" android:layout_width="@dimen/logo_width" android:layout_height="40.0dip" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/left" android:background="@drawable/left" android:layout_width="@dimen/icon_size" android:layout_height="@dimen/icon_size" android:layout_marginLeft="15.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <ImageView android:id="@id/ltclose" android:background="@drawable/close" android:layout_width="@dimen/icon_size" android:layout_height="@dimen/icon_size" android:layout_marginRight="15.0dip" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="8.0dip">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textColor="#ff000000" android:id="@id/username" android:background="@drawable/bg_edit" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/lt_input_username_msg" android:singleLine="true" />
            <ImageView android:id="@id/push" android:background="@drawable/list_20_50" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="10.0dip" android:layout_alignRight="@id/username" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="8.0dip">
        <EditText android:textColor="#ff000000" android:id="@id/password" android:background="@drawable/bg_edit" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/lt_input_password_msg" android:singleLine="true" android:inputType="textPassword" />
    </RelativeLayout>
    <TextView android:textSize="20.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/login_submit_text" android:background="#ff478ce0" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/lt_login_login_text" />
    <View android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingLeft="5.0dip" android:paddingTop="15.0dip" android:paddingRight="5.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:background="@drawable/lock_open" android:layout_width="@dimen/login_link_icon_size" android:layout_height="@dimen/login_link_icon_size" />
            <TextView android:textSize="@dimen/login_link_text_size_portrait" android:textColor="@color/login_link_text_color" android:id="@id/find_pwd" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lt_login_forget_password_text" />
        </LinearLayout>
        <View android:background="@android:color/darker_gray" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <LinearLayout android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/image_person" android:background="@drawable/person_05" android:layout_width="@dimen/login_link_icon_size" android:layout_height="@dimen/login_link_icon_size" android:layout_marginLeft="5.0dip" />
            <TextView android:textSize="@dimen/login_link_text_size_portrait" android:textColor="@color/login_link_text_color" android:id="@id/registers" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lt_login_register_text" />
        </LinearLayout>
        <View android:id="@id/findGm_line" android:background="@android:color/darker_gray" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <LinearLayout android:gravity="center" android:id="@id/findGm_ly" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:background="@drawable/service_06" android:layout_width="@dimen/login_link_icon_size" android:layout_height="@dimen/login_link_icon_size" android:layout_marginLeft="5.0dip" />
            <TextView android:textSize="@dimen/login_link_text_size_portrait" android:textColor="@color/login_link_text_color" android:id="@id/findGM" android:paddingLeft="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lt_login_help_text" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>